# predictsignauxfaibles

./: .env.example  .gitattributes  .githooks.ini  .gitignore  .pylintrc  CHANGELOG.md  LICENCE  Makefile  README.md  config.py  datascience_workflow.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test.yml
analyses/cab_travail_cartos/: commande_cab_travail.ipynb  config.py  utils.py
analyses/cabtravail/: commande_cab_travail.ipynb  config.py  utils.py
data/: secteurs_covid.json
docs/source/: conf.py  index.rst  modules.rst  predictsignauxfaibles.rst
lib/: data.py  decorators.py  model_selection.py  models.py  utils.py
models/1.0.0/: model.yml
models/GAM/: model.yml
models/default/: README.md  config.py  model_conf.py
models/default_with_featuring/: README.md  model_conf.py
models/small/: README.md  model_conf.py
notebooks/: 00-get_started.ipynb  01-e2e_training.ipynb  02-merge_models_into_list.ipynb  02-rapport_post_integration.ipynb  03-select-thresholds-and-evaluate-model.ipynb  03-select-thresholds.ipnyb  03-select-thresholds.ipynb  04-merge_models_into_list.ipynb  05-how_to_data_featuring.ipynb  Test_model_INRIA.ipynb  commande_cab_travail.ipynb
predictsignauxfaibles/: __init__.py  __main__.py  config.py  data.py  decorators.py  evaluate.py  explain.py  explainability.py  explicability.py  logging.py  make_list.py  merge_models.py  model_selection.py  models.py  pipelines.py  preprocessors.py  redressements.py  transformers.py  utils.py
tests/fake_data/: correct.yml  dataframes.py  missing_entry.yml
tests/unit/: data_test.py  (+8 more)
(+1 files in other folders)
