[metadata]
name = predictsignauxfaibles
version = 0.0.1
author = Signaux Faibles
author_email = contact@signaux-faibles.beta.gouv.fr
description = The data science codebase for the Signaux Faibles project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/signaux-faibles/predictsignauxfaibles
project_urls =
    Bug Tracker = https://github.com/signaux-faibles/predictsignauxfaibles/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6