[metadata]
name = predictsignauxfaibles
version = 0.0.1
author = Signaux Faibles
author_email = contact@signaux-faibles.beta.gouv.fr
description = The data science codebase for the Signaux Faibles project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/signaux-faibles/predictsignauxfaibles
project_urls =
    Bug Tracker = https://github.com/signaux-faibles/predictsignauxfaibles/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy; python_version >= "1.18.2"
    pandas; python_version >= "1.1.5"
    pygam; python_version >= "0.8.0"
    pymongo; python_version >= "3.11.3"
    python-dotenv; python_version >= "0.15.0"
    PyYAML; python_version >= "5.4.1"
    scikit-learn; python_version >= "0.24.1"